2001-04-02  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Upgrade to the 2.5.0 code.

	* changer-src/chg-zd-mtx.sh.in: Added barcode reader support,
	>9 tape slot support, variable for 'offline' or 'ONLINE'
	return value of tape device, and multi-config support.  Moved
	all user settable variables to 'changerfile'.conf in the
	amanda config directory.  Added commented out example of .conf
	file into script.
	* NEWS: updated chg-zd-mtx.sh.in changer.

2001-04-02 John R. Jackson <jrj@purdue.edu>

	* NEWS: Initial notes for 2.4.2p2.

2001-03-29  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/getfsent.c (search_fstab): If the device doesn't 
	exist, it will take the entry from /etc/mtab.

2001-03-26 John R. Jackson <jrj@purdue.edu>

	* server-src/amtape.c: Do not rewind for slot "advance".  Do not report
	  device name (which is bogus) for slot "advance".

2001-03-23 John R. Jackson <jrj@purdue.edu>

	* example/amanda.conf.in: Add warning that the sample amanda.conf
	  will not work as is and must be edited to match the installation.

2001-03-21 John R. Jackson <jrj@purdue.edu>

	* recover-src/extract_list.c (extract_files_child): Fix problem that
	  caused xfsrestore arg list to not be NULL terminated.

2001-03-19 John R. Jackson <jrj@purdue.edu>

	* configure.in: Add --with-debug-days (default is 4) and remove
	  --with-pid-debug-files.
	* common-src/Makefile.am: Clean up test program dependencies.
	* common-src/debug.c: Create timestamped debug file names and remove
	  files older (based on file name) than --with-debug-days.  Rename old
	  style names to new style (based on modification time) the first time
	  they are seen.
	* common-src/file.c: Use construct_datestamp() instead of private code.
	* common-src/genversion.c: Display AMANDA_DEBUG_DAYS and remove
	  DEBUG_FILE_WITH_PID.
	* common-src/util.c: Move construct_datestamp to here and add new
	  function construct_timestamp.  Change time used to build string to